Fixed bubble wrap background on mobile

--- a/sass/pages/splash.scss
+++ b/sass/pages/splash.scss
@@ -61,7 +61,8 @@
                 min-height:100vh;
                 @include phone{
                         padding: 8% 10px;
-                        &.splash_lessons{
+                        &.splash_lessons,
+                        &.splash_faqx{
                                 background-repeat:repeat;
                                 background-size:auto;
                         }
