--- a/styles.css
+++ b/styles.css
@@ -426,7 +426,7 @@ body > article {
     @media (max-width: 899px) {
       #Splash section {
         padding: 8% 10px; }
-        #Splash section.splash_lessons {
+        #Splash section.splash_lessons, #Splash section.splash_faqx {
           background-repeat: repeat;
           background-size: auto; } }
   @media (max-width: 899px) {
